chapter 1 first section rewrite

--- a/References/references.bib
+++ b/References/references.bib
@@ -5074,3 +5074,14 @@ abstract = {In this chapter we will consider two main types of plasticity. First
   year={1993},
   publisher={Springer}
 }
+
+@article{markram1997regulation,
+  title={Regulation of synaptic efficacy by coincidence of postsynaptic APs and EPSPs},
+  author={Markram, Henry and L{\"u}bke, Joachim and Frotscher, Michael and Sakmann, Bert},
+  journal={Science},
+  volume={275},
+  number={5297},
+  pages={213--215},
+  year={1997},
+  publisher={American Association for the Advancement of Science}
+}
