chapter 1 part 1 continue

--- a/References/references.bib
+++ b/References/references.bib
@@ -5085,3 +5085,14 @@ abstract = {In this chapter we will consider two main types of plasticity. First
   year={1997},
   publisher={American Association for the Advancement of Science}
 }
+
+@article{bastos2022motor,
+  title={Motor reserve: How to build neuronal resilience against ageing and neurodegeneration?},
+  author={Bastos, PAD and Barbosa, R},
+  journal={Revue Neurologique},
+  volume={178},
+  number={8},
+  pages={845--854},
+  year={2022},
+  publisher={Elsevier}
+}
