refactored to 8 chapters

--- a/References/references.bib
+++ b/References/references.bib
@@ -2368,15 +2368,6 @@ abstract = {In this chapter we will consider two main types of plasticity. First
   publisher={Royal Society of Chemistry}
 }
 
-@article{kozicki2016electrochemical,
-  title={Electrochemical metallization memories},
-  author={Kozicki, Michael N and Mitkova, Maria and Valov, Ilia},
-  journal={Resistive switching: from fundamentals of nanoionic redox processes to memristive device applications},
-  pages={483--514},
-  year={2016},
-  publisher={Wiley Online Library}
-}
-
 @ARTICLE{1487102,
   author={Kusaka, T. and Ohji, Y. and Mukai, K.},
   journal={IEEE Electron Device Letters}, 
@@ -5096,3 +5087,131 @@ abstract = {In this chapter we will consider two main types of plasticity. First
   year={2022},
   publisher={Elsevier}
 }
+
+@inproceedings{govoreanu2013vacancy,
+  title={Vacancy-modulated conductive oxide resistive RAM (VMCO-RRAM): An area-scalable switching current, self-compliant, highly nonlinear and wide on/off-window resistive switching cell},
+  author={Govoreanu, Bogdan and Redolfi, Augusto and Zhang, Leqi and Adelmann, Christoph and Popovici, M and Clima, Sergiu and Hody, Hubert and Paraschiv, Vasile and Radu, IP and Franquet, Alexis and others},
+  booktitle={2013 IEEE International Electron Devices Meeting},
+  pages={10--2},
+  year={2013},
+  organization={IEEE}
+}
+
+@article{cai2011abel,
+  title={Abel dynamics of titanium dioxide memristor based on nonlinear ionic drift model},
+  author={Cai, Weiran and Ellinger, Frank and Tetzlaff, Ronald and Schmidt, Torsten},
+  journal={arXiv preprint arXiv:1105.2668},
+  year={2011}
+}
+
+@article{kempter1999hebbian,
+  title={Hebbian learning and spiking neurons},
+  author={Kempter, Richard and Gerstner, Wulfram and Van Hemmen, J Leo},
+  journal={Physical Review E},
+  volume={59},
+  number={4},
+  pages={4498},
+  year={1999},
+  publisher={APS}
+}
+
+@article{campbell2016pulse,
+  title={Pulse shape and timing dependence on the spike-timing dependent plasticity response of ion-conducting memristors as synapses},
+  author={Campbell, Kristy A and Drake, Kolton T and Barney Smith, Elisa H},
+  journal={Frontiers in bioengineering and biotechnology},
+  volume={4},
+  pages={97},
+  year={2016},
+  publisher={Frontiers Media SA}
+}
+
+@article{deiss1999pulse,
+  title={A pulse-coded communications infrastructure for neuromorphic systems},
+  author={Deiss, Stephen R and Douglas, Rodney J and Whatley, Adrian M and Maass, W},
+  journal={Pulsed neural networks},
+  volume={6},
+  pages={157--78},
+  year={1999},
+  publisher={Boston, MA: MIT Press}
+}
+
+@article{khodagholy2015neurogrid,
+  title={NeuroGrid: recording action potentials from the surface of the brain},
+  author={Khodagholy, Dion and Gelinas, Jennifer N and Thesen, Thomas and Doyle, Werner and Devinsky, Orrin and Malliaras, George G and Buzs{\'a}ki, Gy{\"o}rgy},
+  journal={Nature neuroscience},
+  volume={18},
+  number={2},
+  pages={310--315},
+  year={2015},
+  publisher={Nature Publishing Group US New York}
+}
+
+@inproceedings{orchard2021efficient,
+  title={Efficient neuromorphic signal processing with loihi 2},
+  author={Orchard, Garrick and Frady, E Paxon and Rubin, Daniel Ben Dayan and Sanborn, Sophia and Shrestha, Sumit Bam and Sommer, Friedrich T and Davies, Mike},
+  booktitle={2021 IEEE Workshop on Signal Processing Systems (SiPS)},
+  pages={254--259},
+  year={2021},
+  organization={IEEE}
+}
+
+@article{zha2017imec,
+  title={IMEC: A fully morphable in-memory computing fabric enabled by resistive crossbar},
+  author={Zha, Yue and Li, Jing},
+  journal={IEEE Computer Architecture Letters},
+  volume={16},
+  number={2},
+  pages={123--126},
+  year={2017},
+  publisher={IEEE}
+}
+
+@inproceedings{chen2017neurosim+,
+  title={NeuroSim+: An integrated device-to-algorithm framework for benchmarking synaptic devices and array architectures},
+  author={Chen, Pai-Yu and Peng, Xiaochen and Yu, Shimeng},
+  booktitle={2017 IEEE International Electron Devices Meeting (IEDM)},
+  pages={6--1},
+  year={2017},
+  organization={IEEE}
+}
+
+@article{stimberg2019brian,
+  title={Brian 2, an intuitive and efficient neural simulator},
+  author={Stimberg, Marcel and Brette, Romain and Goodman, Dan FM},
+  journal={elife},
+  volume={8},
+  pages={e47314},
+  year={2019},
+  publisher={eLife Sciences Publications, Ltd}
+}
+
+@article{gewaltig2007nest,
+  title={Nest (neural simulation tool)},
+  author={Gewaltig, Marc-Oliver and Diesmann, Markus},
+  journal={Scholarpedia},
+  volume={2},
+  number={4},
+  pages={1430},
+  year={2007}
+}
+
+@article{kozicki2016electrochemical,
+  title={Electrochemical metallization memories},
+  author={Kozicki, Michael N and Mitkova, Maria and Valov, Ilia},
+  journal={Resistive switching: from fundamentals of nanoionic redox processes to memristive device applications},
+  pages={483--514},
+  year={2016},
+  publisher={Wiley Online Library}
+}
+
+@article{ge2014electrode,
+  title={Electrode-material dependent switching in TaOx memristors},
+  author={Ge, Ning and Zhang, MX and Zhang, Lu and Yang, J Joshua and Li, Zhiyong and Williams, R Stanley},
+  journal={Semiconductor Science and Technology},
+  volume={29},
+  number={10},
+  pages={104003},
+  year={2014},
+  publisher={IOP Publishing}
+}
+
