--- a/References/references.bib
+++ b/References/references.bib
@@ -529,7 +529,8 @@
 @phdthesis{du2017metal,
   title={Metal Oxide Memristors with Internal Dynamics for Neuromorphic Applications},
   author={Du, Chao},
-  year={2017}
+  year={2017},
+  school={The University of Michigan, US}
 }
 
 @article{mehonic2018silicon,
@@ -5215,3 +5216,42 @@ abstract = {In this chapter we will consider two main types of plasticity. First
   publisher={IOP Publishing}
 }
 
+@article{jeong2008origin,
+  title={Origin of subthreshold swing improvement in amorphous indium gallium zinc oxide transistors},
+  author={Jeong, Jong Han and Yang, Hui Won and Park, Jin-Seong and Jeong, Jae Kyeong and Mo, Yeon-Gon and Kim, Hye Dong and Song, Jaewon and Hwang, Cheol Seong},
+  journal={Electrochemical and Solid-State Letters},
+  volume={11},
+  number={6},
+  pages={H157},
+  year={2008},
+  publisher={IOP Publishing}
+}
+
+@article{hirose1976polarity,
+  title={Polarity-dependent memory switching and behavior of Ag dendrite in Ag-photodoped amorphous As2S3 films},
+  author={Hirose, Yooichi and Hirose, Haruo},
+  journal={Journal of Applied Physics},
+  volume={47},
+  number={6},
+  pages={2767--2772},
+  year={1976},
+  publisher={American Institute of Physics}
+}
+
+@incollection{mabilleau2008vitro,
+  title={In vitro biological test methods to evaluate bioresorbability},
+  author={Mabilleau, G and Sabokbar, A},
+  booktitle={Degradation Rate of Bioresorbable Materials},
+  pages={145--160},
+  year={2008},
+  publisher={Elsevier}
+}
+
+@article{zhuge2013advances,
+  title={Advances in resistive switching memories based on graphene oxide},
+  author={Zhuge, Fei and Fu, Bing and Cao, Hongtao},
+  journal={New Prog. Graphene Res},
+  volume={7},
+  pages={185--206},
+  year={2013}
+}
