--- a/References/references.bib
+++ b/References/references.bib
@@ -4755,6 +4755,7 @@ abstract = {In this chapter we will consider two main types of plasticity. First
   title={Sodium distribution in thermal oxide on silicon by radiochemical and MOS analysis},
   author={Yon, E and Ko, WH and Kuper, AB},
   journal={IEEE Transactions on Electron Devices},
+  volume={1},
   number={2},
   pages={276--280},
   year={1966},
