--- a/References/references.bib
+++ b/References/references.bib
@@ -18,6 +18,15 @@
    note = "A strong form of the prime number theorem, 19th century" }
 
 % ------------------------------------------------------------------------
+@article{mannion2023unipolar,
+  title={Unipolar Potentiation and Depression in Memristive Devices Utilizing the Subthreshold Regime},
+  author={Mannion, Daniel John and Vu, Viet Cuong and Ng, Wing Hung and Mehonic, Adnan and Kenyon, Anthony J},
+  journal={IEEE Transactions on Nanotechnology},
+  volume={22},
+  pages={313--320},
+  year={2023},
+  publisher={IEEE}
+}
 
 @article{mehonic2020memristors,
   title={Memristors—From in-memory computing, deep learning acceleration, and spiking neural networks to the future of neuromorphic and bio-inspired computing},
@@ -3848,8 +3857,11 @@ abstract = {In this chapter we will consider two main types of plasticity. First
 }
 
 @article{li2018analog,
-  title={Analog computing using 1T1R crossbar arrays},
+  title={Analog Computing using 1T1R Crossbar Arrays Analog Computing using 1T1R Crossbar Arrays},
   author={Li, Yunning},
+  journal={Feb},
+  volume={28},
+  pages={1--81},
   year={2018}
 }
 
