--- a/thesis-info.tex
+++ b/thesis-info.tex
@@ -1,6 +1,6 @@
 % ************************ Thesis Information & Meta-data **********************
 %% The title of the thesis
-\title{Biorealistic Learning on \\ Memrisitive Network}
+\title{\texorpdfstring{Biorealistic Learning on \\ Memrisitive Network}{Biorealistic Learning on Memrisitive Network}}
 %\texorpdfstring is used for PDF metadata. Usage:
 %\texorpdfstring{LaTeX_Version}{PDF Version (non-latex)} eg.,
 %\texorpdfstring{$sigma$}{sigma}
@@ -12,7 +12,7 @@
 \author{Viet Cuong Vu}
 
 %% Department (eg. Department of Engineering, Maths, Physics)
-\dept{Department of Electronics and Electrical Engineering}
+\dept{Faculty of Engineering Sciences}
 
 
 %% University and Crest
