added abstract and impact statement

--- a/Abstract/abstract.tex
+++ b/Abstract/abstract.tex
@@ -2,7 +2,11 @@
 % Use `abstract' as an option in the document class to print only the titlepage and the abstract.
 \begin{abstract}
 
-\noindent latex.
-\\
+\noindent This thesis presents a comprehensive exploration of biorealistic learning on memristive networks, offering a layered approach that bridges device-level physics and system-level neuromorphic computation. Beginning with a neuroscience primer to ground the discussion in biological plausibility, the chapters systematically progresses through the physics of memristive devices, highlighting their nonlinear dynamics, memory retention mechanisms, and analog switching behaviors. Particular attention is paid to how these physical properties underpin essential computational primitives such as spike-timing-dependent plasticity (STDP), long-term potentiation/depression, and homeostatic regulation.\\
+
+\noindent Through analytical modeling and circuit-level abstraction, the work demonstrates how the intrinsic dynamics of memristors—such as voltage-controlled conductance modulation and ionic drift—map naturally onto biologically inspired learning rules. By anchoring the investigation in real-world material characteristics, such as variability, non-volatility, and resistive switching kinetics, this provides a foundation for designing spiking neural networks (SNNs) that are not only computationally efficient but also physically grounded in the behavior of nanoscale hardware.\\
+
+\noindent This device-to-algorithm pipeline allows for a more faithful reproduction of synaptic processes in silicon, paving the way for energy-efficient, adaptive, and scalable neuromorphic systems. Ultimately, the research argues that an informed understanding of device physics is not peripheral but central to developing biorealistic SNN architectures that can emulate the functional and learning capabilities of biological systems.
+
 
 \end{abstract}
