--- a/Impact/impact.tex
+++ b/Impact/impact.tex
@@ -1,9 +1,16 @@
-% ************************** Thesis Acknowledgements **************************
+% ************************** Thesis Impact Statement **************************
 
 \begin{impact}      
 
-\noindent latex.
-\\
+\noindent This thesis advances the frontier of neuromorphic engineering by presenting a comprehensive, multi-scale investigation into biorealistic learning on memristive networks, bridging device physics, circuit modeling, and system integration. The research offers a sequential and coherent progression of contributions, addressing multiple critical layers of abstraction, arriving at novel artificial intelligence architectures grounded in physical memristive behavior. \\
+
+\noindent At the device level, the thesis begins with the experimental characterization of silicon oxide memristors in the subthreshold regime, revealing their potential for unipolar potentiation and depression—a key mechanism for mimicking biological synaptic plasticity. This was published in IEEE NANO 2023 and presented at EMRS 2025, establishing foundational insights into the neuromorphic viability of subthreshold device operation. \\
+
+\noindent Building on this, the circuit-level work involved the development of SPICE-compatible compact models that accurately capture transient behaviors within subthreshold memristors. Presented at MetroXRAINE 2023 and MEMRISYS 2024, these models enable scalable circuit simulations and lay the groundwork for integrating the current transient under subthreshold device operation into higher-level architectures. \\
+
+\noindent At the system level, the thesis culminates in the implementation of spiking neural networks trained on hardware-aware, biorealistic learning rules. Presented at IEEE NANO 2024 and SEAI 2025 where it was awarded a conference prize for best presentation, then published in their respective proceedings, these architectures demonstrate robust performance while integrating synaptic learning with physics informed constraints. \\
+
+\noindent The thesis thus delivers a vertically integrated exploration—from material behavior to functional cognition—demonstrating the viability of memristive silicon oxide devices for brain-inspired computing. This provides not only theoretical and experimental tools, but also a blueprint for future hardware implementations of biorealistic artificial intelligence systems.\\
 
 \clearpage
 \thispagestyle{empty}
