--- a/References/references.bib
+++ b/References/references.bib
@@ -5268,3 +5268,21 @@ abstract = {In this chapter we will consider two main types of plasticity. First
   pages={185--206},
   year={2013}
 }
+
+@phdthesis{liu2014memristor,
+  title={Memristor-based analog neuromorphic computing engine design and robust training scheme},
+  author={Liu, Beiye},
+  year={2014},
+  school={University of Pittsburgh}
+}
+
+@article{burr2017neuromorphic,
+  title={Neuromorphic computing using non-volatile memory},
+  author={Burr, Geoffrey W and Shelby, Robert M and Sebastian, Abu and Kim, Sangbum and Kim, Seyoung and Sidler, Severin and Virwani, Kumar and Ishii, Masatoshi and Narayanan, Pritish and Fumarola, Alessandro and others},
+  journal={Advances in Physics: X},
+  volume={2},
+  number={1},
+  pages={89--124},
+  year={2017},
+  publisher={Taylor \& Francis}
+}
