--- a/thesis-info.tex
+++ b/thesis-info.tex
@@ -1,6 +1,6 @@
 % ************************ Thesis Information & Meta-data **********************
 %% The title of the thesis
-\title{\texorpdfstring{Biorealistic Learning on \\ Memrisitive Network}{Biorealistic Learning on Memrisitive Network}}
+\title{Memristive Silicon Oxide Devices for Biorealistic Learning}
 %\texorpdfstring is used for PDF metadata. Usage:
 %\texorpdfstring{LaTeX_Version}{PDF Version (non-latex)} eg.,
 %\texorpdfstring{$sigma$}{sigma}
@@ -18,7 +18,7 @@
 %% University and Crest
 \university{University College London}
 % Crest minimum should be 30mm.
-\crest{\includegraphics[width=0.25\textwidth]{Figs/UCL_Crest.jpg}}
+\crest{\includegraphics[width=0.75\textwidth]{Figs/ucl-logo-black-on-grey.jpg}}
 %% Use this crest, if you are using the college crest
 %% Crest long miminum should be 65mm
 %\crest{\includegraphics[width=0.45\textwidth]{University_Crest_Long}}
@@ -37,6 +37,7 @@
 % \supervisorrole{}
 %% Supervisor line width: required to align supervisors
 \supervisorlinewidth{0.25\textwidth}
+
 
 %% Advisor (optional)
 %% for multiple advisors, append each advisor with the \newline command
