--- a/thesis-info.tex
+++ b/thesis-info.tex
@@ -53,7 +53,7 @@
 %% You can redefine the submission text:
 % Default as per the University guidelines:
 % ``This dissertation is submitted for the degree of''
-\renewcommand{\submissiontext}{This dissertation is submitted in fulfilment for the degree of}
+\renewcommand{\submissiontext}{This dissertation is submitted in partial fulfilment for the degree of}
 
 %% Full title of the Degree
 \degreetitle{Doctor of Philosophy}
