started biosignal processing

--- a/References/references.bib
+++ b/References/references.bib
@@ -5286,3 +5286,138 @@ abstract = {In this chapter we will consider two main types of plasticity. First
   year={2017},
   publisher={Taylor \& Francis}
 }
+
+@article{morshed2023choose,
+  title={Choose your tools carefully: a comparative evaluation of deterministic vs. stochastic and binary vs. analog neuron models for implementing emerging computing paradigms},
+  author={Morshed, Md Golam and Ganguly, Samiran and Ghosh, Avik W},
+  journal={Frontiers in Nanotechnology},
+  volume={5},
+  pages={1146852},
+  year={2023},
+  publisher={Frontiers Media SA}
+}
+
+@article{pehle2022brainscales,
+  title={The BrainScaleS-2 accelerated neuromorphic system with hybrid plasticity},
+  author={Pehle, Christian and Billaudelle, Sebastian and Cramer, Benjamin and Kaiser, Jakob and Schreiber, Korbinian and Stradmann, Yannik and Weis, Johannes and Leibfried, Aron and M{\"u}ller, Eric and Schemmel, Johannes},
+  journal={Frontiers in Neuroscience},
+  volume={16},
+  pages={795876},
+  year={2022},
+  publisher={Frontiers Media SA}
+}
+
+@article{friedmann2016demonstrating,
+  title={Demonstrating hybrid learning in a flexible neuromorphic hardware system},
+  author={Friedmann, Simon and Schemmel, Johannes and Gr{\"u}bl, Andreas and Hartel, Andreas and Hock, Matthias and Meier, Karlheinz},
+  journal={IEEE transactions on biomedical circuits and systems},
+  volume={11},
+  number={1},
+  pages={128--142},
+  year={2016},
+  publisher={IEEE}
+}
+
+@article{mannion2020memristor,
+  title={Memristor-based edge detection for spike encoded pixels},
+  author={Mannion, Daniel J and Mehonic, Adnan and Ng, Wing H and Kenyon, Anthony J},
+  journal={Frontiers in neuroscience},
+  volume={13},
+  pages={1386},
+  year={2020},
+  publisher={Frontiers Media SA}
+}
+
+@inproceedings{demiraug2021pcm,
+  title={PCM-trace: scalable synaptic eligibility traces with resistivity drift of phase-change materials},
+  author={Demira{\u{g}}, Yi{\u{g}}it and Moro, Filippo and Dalgaty, Thomas and Navarro, Gabriele and Frenkel, Charlotte and Indiveri, Giacomo and Vianello, Elisa and Payvand, Melika},
+  booktitle={2021 IEEE International Symposium on Circuits and Systems (ISCAS)},
+  pages={1--5},
+  year={2021},
+  organization={IEEE}
+}
+
+@article{john2022reconfigurable,
+  title={Reconfigurable halide perovskite nanocrystal memristors for neuromorphic computing},
+  author={John, Rohit Abraham and Demira{\u{g}}, Yi{\u{g}}it and Shynkarenko, Yevhen and Berezovska, Yuliia and Ohannessian, Natacha and Payvand, Melika and Zeng, Peng and Bodnarchuk, Maryna I and Krumeich, Frank and Kara, G{\"o}khan and others},
+  journal={Nature communications},
+  volume={13},
+  number={1},
+  pages={2074},
+  year={2022},
+  publisher={Nature Publishing Group UK London}
+}
+
+@inproceedings{vu2024spiking,
+  title={Spiking Neural Networks with Nonidealities from Memristive Silicon Oxide Devices},
+  author={Vu, Viet Cuong and Kenyon, Anthony and Joksas, Dovydas and Mehonic, Adnan and Mannion, Daniel J and Ng, Wing H},
+  booktitle={2024 IEEE 24th International Conference on Nanotechnology (NANO)},
+  pages={46--50},
+  year={2024},
+  organization={IEEE}
+}
+
+@article{stoffel2024spiking,
+  title={Spiking neural networks for nonlinear regression of complex transient signals on sustainable neuromorphic processors},
+  author={Stoffel, Marcus and Tandale, Saurabh Balkrishna},
+  journal={npj Unconventional Computing},
+  volume={1},
+  number={1},
+  pages={2},
+  year={2024},
+  publisher={Nature Publishing Group UK London}
+}
+
+@article{kim2021spiking,
+  title={Spiking Neural Network (SNN) with memristor synapses having non-linear weight update},
+  author={Kim, Taeyoon and Hu, Suman and Kim, Jaewook and Kwak, Joon Young and Park, Jongkil and Lee, Suyoun and Kim, Inho and Park, Jong-Keuk and Jeong, YeonJoo},
+  journal={Frontiers in computational neuroscience},
+  volume={15},
+  pages={646125},
+  year={2021},
+  publisher={Frontiers Media SA}
+}
+
+@article{lutes2024convolutional,
+  title={Convolutional spiking neural networks for intent detection based on anticipatory brain potentials using electroencephalogram},
+  author={Lutes, Nathan and Nadendla, Venkata Sriram Siddhardh and Krishnamurthy, K},
+  journal={Scientific Reports},
+  volume={14},
+  number={1},
+  pages={8850},
+  year={2024},
+  publisher={Nature Publishing Group UK London}
+}
+
+@ARTICLE{Joshi2025-sa,
+  title    = "Advancing {EEG} based stress detection using spiking neural
+              networks and convolutional spiking neural networks",
+  author   = "Joshi, Aaditya and Matharu, Paramveer Singh and Malviya, Lokesh
+              and Kumar, Manoj and Jadhav, Akshay",
+  journal  = "Sci. Rep.",
+  volume   =  15,
+  number   =  1,
+  pages    = "26267",
+  month    =  jul,
+  year     =  2025,
+  keywords = "Convolutional spiking neural networks (CSNN);
+              Electroencephalogram (EEG); Spiking neural networks (SNN)",
+  language = "en"
+}
+
+@MISC{Gramfort2020-jm,
+  title     = "ds000248",
+  author    = "Gramfort, Alexandre and H{\"a}m{\"a}l{\"a}inen, Matti S",
+  publisher = "Openneuro",
+  year      =  2020
+}
+
+@article{gramfort2014mne,
+  title={MNE software for processing MEG and EEG data},
+  author={Gramfort, Alexandre and Luessi, Martin and Larson, Eric and Engemann, Denis A and Strohmeier, Daniel and Brodbeck, Christian and Parkkonen, Lauri and H{\"a}m{\"a}l{\"a}inen, Matti S},
+  journal={neuroimage},
+  volume={86},
+  pages={446--460},
+  year={2014},
+  publisher={Elsevier}
+}
