added dimensionality reduction techniques

--- a/References/references.bib
+++ b/References/references.bib
@@ -5421,3 +5421,22 @@ abstract = {In this chapter we will consider two main types of plasticity. First
   year={2014},
   publisher={Elsevier}
 }
+
+@article{malviya2022novel,
+  title={A novel technique for stress detection from EEG signal using hybrid deep learning model},
+  author={Malviya, Lokesh and Mal, Sandip},
+  journal={Neural Computing and Applications},
+  volume={34},
+  number={22},
+  pages={19819--19830},
+  year={2022},
+  publisher={Springer}
+}
+
+@article{shrestha2018slayer,
+  title={Slayer: Spike layer error reassignment in time},
+  author={Shrestha, Sumit B and Orchard, Garrick},
+  journal={Advances in neural information processing systems},
+  volume={31},
+  year={2018}
+}
