chapter 7 first draft

--- a/References/references.bib
+++ b/References/references.bib
@@ -4569,16 +4569,15 @@ abstract = {In this chapter we will consider two main types of plasticity. First
   publisher={Nature Publishing Group UK London}
 }
 
-@dataset{nikolaos_barmpatsalos_2021_5762184,
-  author       = {Nikolaos Barmpatsalos and
-                  Adnan Mehonic},
-  title        = {{SiOx memristor structure - Gradual RESET 
-                   conductance modulation}},
-  month        = dec,
-  year         = 2021,
-  publisher    = {Zenodo},
-  doi          = {10.5281/zenodo.5762184},
-  url          = {https://doi.org/10.5281/zenodo.5762184}
+@MISC{Barmpatsalos2021-yn,
+  title     = "{SiOx} memristor structure - Gradual {RESET} conductance
+               modulation",
+  author    = "Barmpatsalos, Nikolaos and Mehonic, Adnan",
+  abstract  = "Gradual RESET process of SiOx based memristor structures.",
+  publisher = "Zenodo",
+  year      =  2021
+}
+
 }
 
 @inproceedings{el2008performance,
