fixed front page

--- a/thesis-info.tex
+++ b/thesis-info.tex
@@ -30,24 +30,24 @@
 
 %% Supervisor (optional)
 %% for multiple supervisors, append each supervisor with the \newline command
-\supervisor{\normalsize{Anthony J. Kenyon}}
+\supervisor{\normalsize{Principal Supervisor: Anthony J. Kenyon \newline Subsidiary Supervisor: Adnan Mehonic}}
 %% Supervisor Role (optional) - Supervisor (default) or advisor
-\supervisorrole{\normalsize{Principal Supervisor: }}
+\supervisorrole{}
 %% if no title is desired:
 % \supervisorrole{}
 %% Supervisor line width: required to align supervisors
-\supervisorlinewidth{0.25\textwidth}
+\supervisorlinewidth{0.45\textwidth}
 
 
 %% Advisor (optional)
 %% for multiple advisors, append each advisor with the \newline command
-\advisor{\normalsize{Adnan Mehonic}}    
+% \advisor{\normalsize{Adnan Mehonic}}    
 %% Advisor Role (optional) - Advisor (default) or leave empty
-\advisorrole{\normalsize{Subsidiary Supervisor: }}
+% \advisorrole{\normalsize{Subsidiary Supervisor: }}
 %% if no title is required
 % \advisorrole{}
 %% Advisor line width: required to align supervisors
-\advisorlinewidth{0.27\textwidth}
+% \advisorlinewidth{0.27\textwidth}
 
 
 %% You can redefine the submission text:
