start updating chapter 1 figures

--- a/thesis-info.tex
+++ b/thesis-info.tex
@@ -12,8 +12,8 @@
 \author{Viet Cuong Vu}
 
 %% Department (eg. Department of Engineering, Maths, Physics)
-\dept{Faculty of Engineering Sciences}
-
+% \dept{Faculty of Engineering Sciences}
+\dept{Department of Electronic and Electrical Engineering}
 
 %% University and Crest
 \university{University College London}
